Fix border css so it wraps content

--- a/src/styles/layout-overide.css
+++ b/src/styles/layout-overide.css
@@ -7,7 +7,7 @@ html {
   height: 100%;
 }
 body {
-  height: 100%;
+  min-height: 100%;
   border: 5px solid #ed0968;
 }
 h1 {
